--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "chai": "^6.0.1",
     "mocha": "^11.7.2",
     "sinon": "^21.0.0"
+  },
+  "dependencies": {
+    "deepmerge": "^4.3.1"
   }
 }
