--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sinon": "^21.0.0"
   },
   "dependencies": {
-    "deepmerge": "^4.3.1"
+    "deepmerge": "^4.3.1",
+    "fast-deep-equal": "^3.1.3"
   }
 }
