--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 {
-    // プロジェクトに合わせて変更してください
     "include": [
         "src/**/*"
     ],
@@ -7,5 +6,6 @@
         "allowJs": true,
         "declaration": true,
         "emitDeclarationOnly": true,
+        "incremental": true
     },
 }
