wip apply type checking

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "allowJs": true,
         "declaration": true,
         "emitDeclarationOnly": true,
-        "incremental": true
+        "incremental": true,
+        "checkJs": true
     },
 }
