--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,9 @@
         "src/**/*"
     ],
     "compilerOptions": {
+        "lib": [
+            "esnext"
+        ],
         "allowJs": true,
         "declaration": true,
         "emitDeclarationOnly": true,
