fix broken logic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "void/word4typscript.ts"
     ],
     "compilerOptions": {
         "lib": [
