--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
+    "@types/node": "^24.5.2",
     "chai": "^6.0.1",
     "mocha": "^11.7.2",
     "sinon": "^21.0.0",
